--- a/views/results.hbs
+++ b/views/results.hbs
@@ -1,4 +1,4 @@
 <h2>Students who passed the exam:</h2>
-{{#each students}}
+{{#each newStudents}}
     <div>{{this.name}}, {{this.score}}</div>
 {{/each}}
